# sei-task

./: README.md  SEI Task.ipynb  cnpj.csv  data.csv  pyproject.toml  result.csv
